added mobile and tablet responsiveness updated readme

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 </li>
             </ul>
         </div>
+        <div class="ham-menu">
+            <img src="./images/ham-menu-white.png" alt="ham-menu" class="ham-lines">
+        </div>
     </nav>
     <div class="sec-one">
         <div class="sec-one-left">
